Rename/Delete für Table und TreeTable